cmake_minimum_required (VERSION 3.8)
project ("KeyRecorder")
add_executable (KeyRecorder "KeyRecorder.cpp" "KeyRecorder.h" "queue.cpp" "queue.h" "Gui.cpp" "Gui.h" "GlobalVars.h")
#add_executable (KeyRecorder "Test.cpp")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std:c++latest")
find_package(glad CONFIG REQUIRED)
target_link_libraries(KeyRecorder PRIVATE glad::glad)
find_package(glfw3 CONFIG REQUIRED)
target_link_libraries(KeyRecorder PRIVATE glfw)
find_package(imgui CONFIG REQUIRED)
target_link_libraries(KeyRecorder PRIVATE imgui::imgui)